# hailo8_detection

./: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py
hailo8_detection/: hailo8_detection.py
launch/: hailo8_detection.launch.py
models/: put_models_here.md
scripts/: get_hefs_and_video.sh
